<?xml version='1.0' encoding='utf-8'?>
<resources>
<string name="app_name">爱上聚会</string>
<string name="punishmen">开始惩罚</string>
<string name="hello_world">Hello world!</string>
<string name="menu_settings">Settings</string>
<string name="textPeople">参与人数</string>
<string name="startGame">开始游戏</string>
<string name="setting_afterShow">是否在每轮投票后显示是否冤死</string>
<string name="setting_blank">是否添加空白词平民</string>
<string name="cost">-</string>
<string name="add">+</string>
<string name="remamber">记住了,传给下一位</string>
<string name="one">1</string>
<string name="guesscontent">快去猜谁是卧底吧~</string>
<string name="txtUndex">卧底人数</string>
<string name="tip">注：为保证游戏趣味性，对卧底最大比例进行了限制</string>
<string name="title_activity_chat_room">ChatRoomActivity</string>
<string name="action_settings">Settings</string>
<string name="chatroom">打开聊天室</string>
<string name="question_jump">进入头脑风暴</string>
<string name="question_title">开始头脑风暴啦,嘎嘎</string>
<string name="givetoother">请避免被别的玩家看到</string>
<string name="question_rule">游戏规则：</string>
<string name="question_next">下一题</string>
<string name="more">更多</string>
<string name="lose">点背不能怨社会，你输了！</string>
<string name="punish_adventure">大冒险</string>
<string name="punish_true">真心话</string>
<string name="punish_tips">可以选择真心话或者大冒险</string>
<string name="punish_random_btn">随机惩罚</string>
<string name="punish_other">换题</string>
<string name="random_punish">接受</string>
<string name="clickme">有胆量就点</string>
<string name="askme">有胆量就问</string>
<string name="circleme">有胆量就转</string>
<string name="truethings">真心话大冒险</string>
<string name="strreturn">返回</string>
<string name="start">开始</string>
<string name="clicksay">有胆量你就点我吧！看谁最衰！！\n1、每人点击一次或多次，点击一定次数之后会爆!\n2、颜色越红，表示危险级数表示越危险！\n3、点击次数为合计点击的次数！\n4、大胆的你就多点吧！</string>
<string name="about">关于</string>
<string name="strweixin">谁是卧底-微信版</string>
<string name="cametogether">朋友远在千里之外?\n上线时间分散?\n这通通不能阻隔朋友间玩谁是卧底的机会~\n体验不一样的谁是卧底游戏，\n就在谁是卧底微信版？\n随时随地!随心随意!</string>
<string name="saoma">扫描二维码，快速进入</string>
<string name="content_en">who is undercover ?</string>
<string name="content_zn">谁 是 卧 底</string>
<string name="content_title">玩 法 介 绍</string>
<string name="title_activity_home">HomeActivity</string>
<string name="strwhoisundercover">谁是卧底</string>
<string name="strplayrule">简介</string>
<string name="strweixinhao">微信</string>
<string name="strmake">关于</string>
<string name="moregame">更多</string>
<string name="home_page">主页</string>
<string name="contentmake">【谁是卧底】v1.04</string>
<string name="strmack">谁是卧底 1.04</string>
<string name="emailaddr">centurywar@163.com</string>
<string name="feedback">反馈</string>
<string name="pull_bluebtntext">蓝方</string>
<string name="pull_redbtntext">红方</string>
<string name="pull_jump">手指拔河</string>
<string name="title_activity_select_game">SelectGameActivity</string>
<string name="strasktitle">有胆量就问</string>
<string name="strToWeixin">微信版本</string>
<string name="strAbout">关于游戏</string>
<string name="strBgn">开始游戏</string>
<string name="weixinrule">【谁是卧底-微信版】游戏规则\n【人数】：\n\t法官1人，玩家4至15人\n【开局】：\n\t法官回复参与人数，返回平民及卧底身份及编号，以及房间号\n【参与】：\n\t把房间号通过群告诉所有玩家，参与者向我发送房间号，我会给他们发送身份及说明编号\n【进行】：\n\t法官组织每位玩家依次发言，每位玩家说自己编号及简短的描述自己的身份以\n【投票】：\n\t描述一轮结束后，玩家投票选择卧底，票数较多的玩家身亡。分出结果后，法官公布结果（冤死或卧底）\n【胜利】：\n\t卧底全被揪出，则平民胜利，卧底数大于等于平民数，卧底胜利\n【惩罚】：\n\t回复2或3返回真心话大冒险，输的玩家掷骰子选择惩罚</string>
<string name="quickStart">快速开始</string>
<string name="strSound">声音</string>
<string name="restart">重新开始</string>
<string name="blank">空白</string>
<string name="gusswhoisspy">快去猜猜谁是卧底吧~</string>
<string name="undercover">卧底</string>
<string name="aggrieved">冤死</string>
<string name="taplong">长按选择</string>
<string name="gameOver">完成任务，卧底为</string>
<string name="undercoverwin">卧底胜利</string>
<string name="gameoverspy">游戏失败，卧底胜利，卧底为</string>
<string name="hy">还有</string>
<string name="ge">个</string>
<string name="dangerousrate">危险概率：</string>
<string name="overString1">没找到全部卧底，游戏继续</string>
<string name="overString2">卧底隐藏很深噢！</string>
<string name="overString3">快去把卧底给投出来吧~</string>
<string name="overString4">平民可要小心噢!</string>
<string name="overString5">卧底这是要逆天了吗？</string>
<string name="overString6">投错一个就少一个战友~</string>
<string name="overString7">卧底卧底，你在哪里！</string>
<string name="overString8">卧底，你是想怎样~</string>
<string name="Version">【爱上聚会】2.11版本</string>
<string name="suggest">意见及建议：</string>
<string name="suggest1">\n\n\nv2.11版本新功能：\n\n1、修复了2.10个别机器里面大冒险崩溃的BUG\n\n2、用户提交真心话大冒险时可以设置昵称</string>
<string name="PunishInTurn">请输的同学依次接受惩罚</string>
<string name="nextQuestion">下一题</string>
<string name="GameOver">游戏结束</string>
<string name="dangerrate">危险级数：</string>
<string name="click">点击了%d次</string>
<string name="shibaizhe">接受惩罚:</string>
<string name="fayan">发言顺序:</string>
<string name="hao">%s号\t</string>
<string name="GameRule">游戏规则:\n1、选择参与人数与卧底人数开始游戏\n2、每人需记得自己的词语和编号\n3、依次描述自己的词语\n4、每轮描述结束后，投票选出卧底\n5、剩余玩家继续描述</string>
<string name="Vrequir">胜利条件：\n1、卧底全部被指认出，平民胜利\n2、卧底人数大于等于平民数目时，卧底胜利</string>
<string name="usercontribution">用户贡献</string>
<string name="thankyou">因为有你们，游戏才变的更精彩！谢谢你们</string>
<string name="playdisc">摇骰子</string>
<string name="zhenxin">真心话大冒险</string>
<string name="strcontinue">接着上局玩</string>
<string name="exit">确认退出吗？</string>
<string name="soundon">音效：开</string>
<string name="soundoff">音效：关</string>
<string name="doit">确定</string>
<string name="returnit">返回</string>
<string name="setting_word_eat">吃货</string>
<string name="setting_word_pard">品牌</string>
<string name="setting_word_hard">高手</string>
<string name="setting_word_big">重口味</string>
<string name="setting_word_wenyi">文艺青年</string>
<string name="setting_word_people">人物角色</string>
<string name="setting_word_city">城市地区</string>
<string name="setting_word_all">全部分类</string>
<string name="setting_word">长按选择分类</string>
<string name="setting_word_new">当前词组类别：</string>
<string name="changeword">更换题目</string>
<string name="setting_word_daily">日常</string>
<string name="setting_word_fresh">小清新</string>
<string name="sound">音效：</string>
<string name="longclicekdisc">长按摇骰子或随机选择</string>
<string name="tipkill">注：为保证游戏趣味性，对游戏中人数进行限制</string>
<string name="setting_afterShow_kill">投票之后是否显示玩家身份</string>
<string name="txtwordsetting">设置分类</string>
<string name="txtgamerolu">游戏规则</string>
<string name="txtGuessHelp">"长按投出卧底，胜利条件\n1、卧底数大于等于平民时：卧底胜\n2、卧底被全部投出：平民胜"</string>
<string name="txtPaiHelp">"请记着自己的编号和身份，把手机交与下个玩家\n1、请避免被别的玩家看到\n2、第一个翻牌的玩家有机会更新词汇"</string>
<string name="txtPaiFirstPeople">"第一位玩家才可以换词呀~"</string>
<string name="txtQuictAsk">"快速说出绕口令:"</string>
<string name="txtShareSay">"#爱上聚会#我发现了个超好玩的聚会游戏!有了它,聚会不再冷场,你就是聚会的主角!大家快来玩吧~http://42.121.123.185/UnderCover.apk"</string>
<string name="txtKillHelp">"请记着自己的编号和身份，把手机交与下个玩家\n1.请避免被别的玩家看到\n"</string>
<string name="txtPolice">"警官"</string>
<string name="txtKiller">"杀手"</string>
<string name="txtFaGuan">"法官"</string>
<string name="txtNormal">"平民"</string>
<string name="txtKillerHelp">"参与人数：总玩家数(包括法官)\n平民人数：总玩家人数1/2\n警察人数：总玩家人数1/4\n杀手人数：总玩家人数1/4"</string>
<string name="txtKillerSucces">"长按玩家出局，胜利条件\n1、警察全部死光：杀手胜\n2、杀手全部死光：平民和警察胜"</string>
<string name="txtKillerPoliceSucces">"警察胜利"</string>
<string name="txtKillerKillerSucces">"杀手胜利"</string>
<string name="txtKillerGameName">"杀人游戏"</string>
<string name="txtSettingHelp">"参与人数：总玩家数\n卧底人数：一般为总玩家人数1/4\n显示冤死：结束的时候会亮名玩家身份（简单）\n词汇分类：选择相应分类出现不同的词汇"</string>
<string name="txtTooMuchPeople">"人太多了，分两波玩更有意思啊"</string>
<string name="txtTooLittlePeople">"人太少了，试试适合2~3人的游戏吧~"</string>
<string name="txtTooMuchUnderCover">"全民卧底，可不好玩~"</string>
<string name="txtTooLitterUnderCover">"至少要留个卧底吧~"</string>
<string name="txtSettingWords">"自定义词汇"</string>
<string name="txtWeixinHelp">"微信帮助信息"</string>
<string name="txtWordsCantSame">"词汇不能相同"</string>
<string name="txtWordsCantSpecial">"不能输入'_',','"</string>
<string name="txtWordsAddSuccess">"添加成功"</string>
<string name="txtWordsPeopleInput">"自定义_"</string>
<string name="txtKillerRule">"什么是杀人游戏？别担心，这里没有任何暴力或其它不良成分，只是一种纯粹斗智的游戏。\n每局有一个法官，若干警察和杀手以及平民\n1、抽到法官的玩家引导游戏进行,引导杀手杀人、警察验人、全民投票等行为进行\n2、游戏分类天黑及天亮阶段\n3、天黑的时候，所有玩家闭眼低头，法官引导杀手杀人、警察验人。\n4、天亮的时候，法官公布被杀的人及依次全民投票\n5、被杀掉的玩家及被公投的玩家出局，直到杀手被杀光或警察被杀光，游戏结束"</string>
<string name="txtLeftRight">"滑动同样精彩"</string>
<string name="txtContinue">"继续游戏"</string>
<string name="txtPush">"挤数字"</string>
<string name="txtPushRule">"简单粗暴挤数字，小伙伴们快来开森一下吧！~\n1、系统会随机默认选出一个数字\n2、玩家轮流点击数字之后，系统会将不包括这个数字的那部分去掉\n3、激烈的白热化战争之后，最后点中系统选出的数字者接受惩罚"</string>
<string name="txtWordSetting">"自定义词汇"</string>
<string name="txtAppName">"爱上聚会"</string>
<string name="txtStartUnderCover">"开始谁是卧底"</string>
<string name="AppropriateNumber">"适合人数:"</string>
<string name="aliveNUM"> "剩余卧底:" </string>
<string name="citizenNUM"> "个  剩余平民:"</string>
<string name="unitGE"> "个"</string>
<string name="connect"> "\n新浪微博：@爱上聚会\n腾讯微信：centurywar\n"</string>
<string name="TheWords"> "***************获得的词组为："</string>
<string name="showAd">显示广告</string>
<string name="hideAd">隐藏广告</string>
<string name="thankforad">感谢您的支持，广告能支持我们更好的去完善游戏</string>
<string name="thankforhidead">还您一个洁净的游戏</string>
<string name="userContribute">用户贡献</string>
<string name="addcontribute">添加</string>
<string name="addTruth">添加大冒险</string>
<string name="send">发布</string>
<string name="IntenetTrues">网络版</string>
<string name="importInto">直接导入本地库</string>
<string name="txtChange">换一批</string>
<string name="txtSay">提一个</string>
<string name="honest">真心话</string>
<string name="adventure">大冒险</string>
<string name="actor">看演技</string>
<string name="username">昵称：</string>
<string name="showgm">显示GM设置</string>
<string name="finish">完成</string>
<string name="pleaseInput">请输入昵称：</string>
<string name="历史房间">历史房间</string>
<string name="game_join">加入房间</string>
<string name="game_create">创建房间</string>
<string name="peoplethis">本机人数</string>
<string name="开始游戏">开始游戏</string>

<string name="返回">返回</string>

<string name="谁是卧底">谁是卧底</string>

<string name="杀">杀</string>

<string name="卧">卧</string>

<string name="杀人游戏">杀人游戏</string>

<string name="身份">身份</string>
<string name="参与人数">参与人数</string>
<string name="num4">4</string>

<string name="卧底人数">卧底人数</string>
<string name="个人信息">个人信息</string>
<string name="基本设置">基本设置</string>
<string name="音效">音效</string>
<string name="关于游戏">关于游戏</string>
<string name="版本信息">版本信息</string>
<string name="背景音效">背景音效</string>
<string name="意见建议反馈">意见建议反馈</string>
<string name="开">开</string>
<string name="向右">></string>
<string name="下一条">下一条</string>
<string name="真心话大冒险">真心话大冒险</string>
<string name="网络词汇">网络词汇</string>
<string name="本地词汇">本地词汇</string>
<string name="建议反馈">建议反馈</string>
<string name="关于">关于</string>
<string name="重新开始">重新开始</string>
<string name="刷新词汇">刷新词汇</string>
<string name="刷新房间">刷新房间</string>
<string name="昵称">昵称</string>
<string name="删除">删除</string>
<string name="请输入房间号">请输入房间号</string>

<string name="长按重新开始">长按重新开始</string>
<string name="修改昵称">修改昵称</string>

<string name="信件">信件</string>

<string name="分享">分享</string>


<string name="惩罚">惩罚</string>


<string name="长按抽取">长按抽取</string>



<string name="长按切换">长按切换</string></resources>