<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scr"
        android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/个人信息" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WRITE"
            android:padding="@dimen/alphabet_size" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="left"
                android:src="@drawable/default_photo" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/基本设置" />

        <LinearLayout
             android:id="@+id/LinearSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WRITE"
            android:padding="@dimen/alphabet_size" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/背景音效" />

            <TextView
                android:id="@+id/txtSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="@string/开" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/关于游戏" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WRITE"
            android:padding="@dimen/alphabet_size" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/版本信息" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="TextView" />
        </LinearLayout>

        
        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/LinearAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WRITE"
            android:padding="@dimen/alphabet_size" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/关于" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="@string/向右" />
        </LinearLayout>
        
        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/LinearFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WRITE"
            android:padding="@dimen/alphabet_size" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/意见建议反馈" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="@string/向右" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>