<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/d"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WRITE"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/txtRoomid"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/请输入房间号"
            android:inputType="number"
            android:textColor="@color/RED" />

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="193dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_blue_pressed"
            android:text="@string/game_join"
            android:textColor="@color/WRITE"
            android:textSize="@dimen/btn_font_size" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="193dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_green_pressed"
            android:text="@string/game_create"
            android:textColor="@color/WRITE"
            android:textSize="@dimen/btn_font_size" />

        <Button
            android:id="@+id/btnResent"
            android:layout_width="193dp"
            android:layout_height="49dp"
            android:background="@drawable/btn_pink_pressed"
            android:text="@string/历史房间"
            android:textColor="@color/WRITE"
            android:textSize="@dimen/btn_font_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/help_pressed" />

</RelativeLayout>