<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="224dp" >

        <TextView
            android:id="@+id/txtShenfen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="TextView"
            android:textSize="@dimen/index" />

        <TextView
            android:id="@+id/textViewab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/givetoother" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btnbg"
            android:text="@string/remamber" />

        <ImageView
            android:id="@+id/imagePan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/popo512" />

        <TextView
            android:id="@+id/txtIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/one"
            android:textSize="@dimen/large80" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/changeword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="right" >

        <Button
            android:id="@+id/btnchangeword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/update" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeword" />
    </LinearLayout>

</RelativeLayout>