<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/chengfa"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/circle_2x" />
    
    <Button
        android:id="@+id/imageBtnMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_yuan_red_2x"
        android:text="@string/clickme"
        android:textAlignment="center"
        android:textColor="@color/WRITE"
        android:textSize="@dimen/large80" />


    <Button
        android:id="@+id/btn_punish"
        android:layout_width="193dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_purple_2x"
        android:text="@string/punishmen"
        android:textColor="@color/WRITE"
        android:textSize="@dimen/size20" />

    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/长按重新开始"
         />

</RelativeLayout>